(feat): -bump to jdk 19 -add script for vtune analysis -disable loop unrolling